[package]
name = "ff-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
ff = {path = "../ff"}
humansize = "2.1.3"
log = "0.4.28"
predicates = "3.1.3"
regex = "1.11.3"
similar-asserts = "1.7.0"

[dev-dependencies]
assert_cmd = "2.0.17"
fastrand = "2.3.0"
