[package]
name = "ff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bitflags = "2.9.4"
colored = "3.0.0"
devicemapper = "0.34.5"
humantime = "2.2.0"
indicatif = "0.18.0"
log = "0.4.28"
nix = { version = "0.30.1", features = ["mount", "feature"] }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
statistical = "1.0.0"
tar = "0.4.44"
xz2 = "0.1.7"
